// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/menu/demo/basic.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="top-nav-bar am-navbar am-navbar-light"
    >
      <div
        class="am-navbar-left"
        role="button"
      >
        <span
          aria-hidden="true"
          class="am-navbar-left-icon"
        >
          <img
            alt=""
            class="am-icon am-icon-md"
            src="https://gw.alipayobjects.com/zos/rmsportal/iXVHARNNlmdCGnwWxQPH.svg"
          />
        </span>
        Menu
      </div>
      <div
        class="am-navbar-title"
      >
        Here is title
      </div>
      <div
        class="am-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/multiSelect.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="multi-top-nav-bar am-navbar am-navbar-light"
    >
      <div
        class="am-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="am-navbar-title"
      >
        Multi select menu
      </div>
      <div
        class="am-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/singleMulti.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="single-multi-top-nav-bar am-navbar am-navbar-light"
    >
      <div
        class="am-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="am-navbar-title"
      >
        Single Multi menu
      </div>
      <div
        class="am-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/singleSelect.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="single-top-nav-bar am-navbar am-navbar-light"
    >
      <div
        class="am-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="am-navbar-title"
      >
        OneLevel menu
      </div>
      <div
        class="am-navbar-right"
      />
    </div>
  </div>
</div>
`;
